# snipr

./: .claude-mcp-config.json  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  <Mock name='mock.VECTOR_DB_PATH' id='126809301892176'>  <Mock name='mock.VECTOR_DB_PATH' id='126809302123856'>  <Mock name='mock.VECTOR_DB_PATH' id='126809303334032'>  EnhancementPlan.md  README.md  SQLITE_VEC_README.md  pyproject.toml  sqlite-vec-comparison.md  test_async_indexing.py  test_db_query.py  test_search.py
.claude/prds/: semantic-code-retrieval.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.index_cache/: bm25_index.db  embeddings.db  index_metadata.json
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  (+270 more)
PRPs/: code-indexing-tool.md
src/: config.py  main.py
src/models/: indexing_models.py
src/services/: bm25_search.py  db_migration.py  hybrid_search.py  indexing_service.py  logging_service.py  metadata_extractor.py  metadata_search.py  migration_to_vec.py  quality_metrics.py  (+6 more)
tests/: test_config_simple.py  test_enhanced_models.py  test_indexing_service.py  test_metadata_extractor.py  test_metadata_search.py  test_quality_metrics.py  test_repository_analyzer.py  test_search_service.py  test_search_service_reliable.py  test_search_simple.py  test_simple_coverage_boost.py  test_syntactic_chunker.py  test_update_service.py
(+3532 files in other folders)
